# fantasi

./: .travis.yml  LICENSE  README.md  fantasi-script.sh  fantasi.cabal  ga.c  microblaze-API.c  nios-API-v2.c  nios-API.c  nios-program.c  script.sh  stack.yaml
c/: bithacks.c  bitvectors.c  crossover.c  ga.c  ga_bv.c  nios-API-v2.c  roulette.c  tests.c
dependencies/: FSM.vhdl  comparator.vhdl  delayer.vhdl  ffd.vhdl  register.vhdl  shift-register-enable.vhdl  shift-register-input.vhdl
dependencies/Altera_DE4/: TOP.vhd  constraints.sdc
dependencies/Altera_DE4/niosII/: niosII.sopcinfo  system1.cmp  system1.html  system1.xml  system1_inst.v
dependencies/Altera_DE4/niosII/synthesis/: system1.debuginfo  system1.v
dependencies/Altera_DE4/pll_100mhz/: pll_100mhz.ppf
dependencies/Xilinx_Virtex7/: top.vhd
dependencies/niosII/: niosII.qsys  system1.bsf  system1_bb.v  system1_inst.vhd
dependencies/niosII/synthesis/: system1.qip  system1.regmap
dependencies/niosII/synthesis/submodules/: system1_input0.v  system1_mm_interconnect_0.v  system1_mm_interconnect_0_avalon_st_adapter.v  system1_mm_interconnect_0_avalon_st_adapter_error_adapter_0.sv  system1_mm_interconnect_0_router_002.sv  system1_mm_interconnect_0_router_003.sv  system1_mm_interconnect_0_rsp_demux.sv  system1_mm_interconnect_0_rsp_mux_001.sv  system1_nios2_gen2_0_cpu.sdc  system1_nios2_gen2_0_cpu_debug_slave_sysclk.v  system1_nios2_gen2_0_cpu_debug_slave_tck.v  system1_onchip_memory2_0.hex  system1_onchip_memory2_0.v  system1_output0.v
dependencies/pll_100mhz/: pll_100mhz.qip  pll_100mhz.v
doc/: README.md
src/: LICENSE  README.md  fantasi.cabal  stack.yaml
src/Tuura/Fantasi/: Alga.hs  HubRewrite.hs
src/Tuura/Fantasi/VHDL/: Writer.hs
src/Tuura/Fantasi/VHDL/Internal/: EnvironmentWriter.hs  (+1 more)
src/fantasi/Tuura/Fantasi/: Main.hs  Options.hs
test/: Main.hs  VHDLLiterals.hs
vhdl/: FSM-enable-nodes.vhd  FSM.vhdl  accumulator.vhdl  counter.vhdl  ffd-inv.vhdl  shift-register-input.vhdl  shift_register.vhdl  sync-latch.vhdl  sync-register.vhdl  zero_comparator.vhdl
(+15 files in other folders)
