name:                fantasi
version:             0.1.0.0
synopsis:
homepage:            https://github.com/tuura/fantasi
license:             MIT
license-file:        LICENSE
author:              Alessandro de Gennaro <a.de-gennaro@ncl.ac.uk>,
                     Andrey Mokhov <andrey.mokhov@gmail.com>,
                     github: @allegroCoder, github: @snowleopard
maintainer:          Alessandro de Gennaro <a.de-gennaro@ncl.ac.uk>,
                     github: @allegroCoder
copyright:           Tuura, github.com/tuura
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable fantasi
  hs-source-dirs:   src/fantasi
  main-is:          Main.hs
  other-modules:    Tuura.Fantasi.Main,
                    Tuura.Fantasi.Options
  build-depends:    base >= 4.8 && < 5,
                    filepath,
                    pangraph,
                    bytestring,
                    fantasi
  default-language: Haskell2010
  GHC-options:      -Wall -fwarn-tabs

library
  hs-source-dirs:      src/src
  exposed-modules:     Tuura.Fantasi.VHDL.Internal.EnvironmentWriter,
                       Tuura.Fantasi.VHDL.Internal.GraphWriter,
                       Tuura.Fantasi.VHDL.Writer
  -- other-modules:
  build-depends:       base >= 4 && < 5,
                       bytestring,
                       pangraph
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite fantasi-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src/test
  main-is:             Main.hs
  other-modules:       VHDLLiterals
  build-depends:       base
                     , fantasi
                     , HUnit
                     , bytestring
                     , pangraph

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tuura/fantasi/src
